ナビバーが固定される条件をkeyvisualの高さ分スクロールという条件に変更、css　keyvisualの高さを変更、is-fixedにtransitionを追記

--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="keyvisual"></div>
-  <header id="header">
-    <nav class="header-nav inner">
-      <h1 class="site-title">WINDOW ON THE FUTURE  未来をひらく窓 - GAUDI meets 3D PRINTING</h1>
-      <div class="language-wrapper">
-        <p>
-          <a href="#">JP</a>
-        </p>
-        <p>/</p>
-        <p>
-          <a href="#">EN</a>
-        </p>
-      </div>
-      <div class="company">
-        <a href="#">
-          <span class="company-title">
-            YKK<br>
-            ap
-          </span>
-        </a>
-      </div>
-      <div class="menu">
-        <span class="menu-btn"></span>
-      </div>
-    </nav>
-  </header>
-  <main></main>
+  <div id="keyvisual"></div>
+    <div id="container">
+      <header id="header">
+        <nav class="header-nav inner">
+          <h1 class="site-title">WINDOW ON THE FUTURE  未来をひらく窓 - GAUDI meets 3D PRINTING</h1>
+          <div class="language-wrapper">
+            <p>
+              <a href="#">JP</a>
+            </p>
+            <p>/</p>
+            <p>
+              <a href="#">EN</a>
+            </p>
+          </div>
+          <div class="company">
+            <a href="#">
+              <span class="company-title">
+                YKK<br>
+                ap
+              </span>
+            </a>
+          </div>
+          <div class="menu">
+            <span class="menu-btn"></span>
+          </div>
+        </nav>
+      </header>
+      <main></main>
+    </div>
   <script src="main.js"></script>
 </body>
 </html>
